syntax = "proto3";

package user;

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetAllUsers(Empty) returns (GetAllUsersResponse);
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse  {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string message = 4;
}

message Empty {}

message GetAllUsersResponse {
  repeated GetUserResponse users = 1;
}
